Fix contrast issues, add focus with hover states

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -151,7 +151,8 @@
 		color: inherit;
 		text-decoration: none;
 
-		&:hover {
+		&:hover,
+		&:focus {
 			border-bottom-color: transparent;
 		}
 	}
@@ -927,7 +928,8 @@
 		overflow: hidden;
 		text-overflow: ellipsis;
 
-		&:hover {
+		&:hover,
+		&:focus {
 			background-color: _palette(border-bg);
 		}
 
@@ -958,7 +960,8 @@
 			box-shadow: none !important;
 			color: _palette(accent6, fg-bold) !important;
 
-			&:hover {
+			&:hover,
+			&:focus {
 				background-color: lighten(_palette(accent6, bg), 5) !important;
 			}
 
@@ -1297,7 +1300,8 @@
 				box-shadow: inset 0 0 0 2px _palette($p, border);
 				color: _palette($p, fg-bold);
 
-				&:hover {
+				&:hover,
+				&:focus {
 					background-color: _palette($p, border-bg);
 				}
 
@@ -1839,16 +1843,17 @@
 			font-size: 1.25em;
 
 			a {
-				color: _palette(fg-light);
+				color: _palette(fg);
 
-				&:hover {
-					color: _palette(fg);
+				&:hover,
+				&:focus {
+					color: _palette(accent2, bg);
 				}
 			}
 		}
 
 		.copyright {
-			color: _palette(fg-light);
+			color: _palette(fg);
 			font-size: 0.8em;
 			letter-spacing: _size(letter-spacing-alt);
 			list-style: none;
@@ -1871,7 +1876,8 @@
 				a {
 					color: inherit;
 
-					&:hover {
+					&:hover,
+					&:focus {
 						color: _palette(fg);
 					}
 				}
